--- a/lecture_00/worksheet_00.ipynb
+++ b/lecture_00/worksheet_00.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Worksheet 00\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jou-Hsuan Lee\n",
+    "UID: U15459646\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -22,7 +22,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To strengthen a more robust foundation of data science. While I've utilized tools based on regression, clustering and similar concepts, my understanding remains basic levels. This course will provide me with the opportunity to deepen my knowledge and proficiency in these areas."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,7 +36,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Gain a comprehensive understanding of data science tools to effectively apply them to biological data analysis."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +50,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "One of my projects involved analyzing DNA sequencing data from a microbiome, with the goal of identifying the types of bacteria present in the environment. To address this challenge, I employed classification techniques.  \n",
+    "I am currently engaged in a single-cell sequencing project, where my focus is on clustering cells based on their gene expression patterns. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +65,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "statistics"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,10 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda x, y, z : x < y & y < z)(22,44,88)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda n : (lambda x : x*n))(4)(9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,12 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, True, True]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = [-2, -1, 0, 1, 2]\n",
-    "gt_zero = map()\n",
+    "gt_zero = map(lambda x : x > 0, c)\n",
     "list(gt_zero)"
    ]
   },
@@ -296,12 +342,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, True, True, False, False]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = [1, 3, 6, 11, 2]\n",
-    "mul_of3 = map()\n",
+    "mul_of3 = map( lambda x : x % 3 == 0, d)\n",
     "list(mul_of3)"
    ]
   },
@@ -318,12 +375,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "evens = filter()\n",
+    "evens = filter( lambda x : x % 2 == 0, e)\n",
     "list(evens)"
    ]
   },
@@ -333,14 +401,14 @@
    "source": [
     "#### Reduce\n",
     "\n",
-    "`reduce(function, sequence[, initial])` returns the result of sequentially applying the function to the sequence (starting at an initial state). You can think of reduce as consuming the sequence via the function.\n",
+    "`reduce(function, sequence[, initial])` returns the result of sequencially applying the function to the sequence (starting at an initial state). You can think of reduce as consuming the sequence via the function.\n",
     "\n",
     "For example, let's say we want to add all elements in a list. We could write the following:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -380,11 +448,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "factorial = lambda x : reduce()\n",
+    "factorial = lambda x : reduce(lambda f, n: f * n, [i for i in range(x-1,0,-1)], x)\n",
     "factorial(10)"
    ]
   },
@@ -397,11 +476,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
    "source": [
-    "sieve = lambda x : reduce()\n",
+    "sieve = lambda x : list(reduce(lambda l, y: filter(lambda z: z == y or z%y!=0, l), [i for i in range(2,int(x**0.5)+1)], [i for i in range(2,x+1)]))\n",
     "print(sieve(100))"
    ]
   },
@@ -418,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +534,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A class **Bank** is initiated with a value **balance** and a method **is_overdrawn** which checks if the balance is below 0.  \n",
+    "myBank is an instance of **Bank** class with an initial balance of 100.   The below if-else statement checks if the method **is_overdraw** exists in **Bank** class. Because **is_overdrawn** exists in **Bank** class, the condition will always evaluate \"Ture\" and print \"OVERDRAWN\". To call **is_overdrawn** methd, we should add parentheses.   (if myBank.is_overdrawn():)"
+   ]
   },
   {
    "cell_type": "code",
@@ -474,7 +564,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For loop always iterates through a sequence (i.e range(4) in this case) and assigns the next value of the sequence to the loop variable (i) in each iteration, so any assigment in for loop won't affect the loop variable."
+   ]
   },
   {
    "cell_type": "code",
@@ -501,7 +593,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**board** is a list of list which is composed of three **row** references, which means each element in **board** points to the same **row** reference, not creating three new copies. As a result, if one element in **row** is changed, all the elements in **board** are changed."
+   ]
   },
   {
    "cell_type": "code",
@@ -534,11 +628,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In the for loop, the reference of **some_func** function is stored in list **funcs**, which means every element in **funcs** is the same, and results of **some_func** are stored in list **results**, which eqauls to x of each iteration. After the for loop, each element, which is the reference of function **some_func**, in list **func** was called and stored in a new list **funcs_results**. Since x eqauls to 2 after the foor loop and **some_func** returns x, all the elements in **func_results** are 2."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +662,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**1,2,3,4,5** was first written in to **./data.txt** with **w+** modes, which created a new file. Then **./data.txt** was opened again with **w+** modes. Since **./data.txt** was already exsited, this time **./data.txt** was overwritten with an empty file called. As a result, **lines** was an empty list and **sum(nums)** was zero."
+   ]
   }
  ],
  "metadata": {
@@ -588,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
