--- a/lecture_01/worksheet_01.ipynb
+++ b/lecture_01/worksheet_01.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Jou-Hsuan Lee  \n",
+    "UID: U15459646  \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -190,7 +189,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Git is a version control system that can track changes that I and/or others made. Github is a web-based cloud service to manage git repo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +203,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone <repo url>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,10 +217,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "fork"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,7 +231,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. GitHub repo is stored on cloud, if I want to change my copy I need to pull or fetch it."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,10 +245,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "add->commit->push"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -252,7 +259,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I need to fetch the Github repo to my local repo and merge files (or rebase) to my local workspace, and then push it to Github repo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,7 +273,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Two or more changes were made in the same files. To resolve them, first fetch and merge the latest file from the remote repo. Then, manually solve all the conflicts. Finally, add, commit, and push back to the remote repo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -276,7 +287,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Press **pull request** bottom\n",
+    "2. Choose which branch  of the class repository to be changed and which branch of my repositoy that has been change\n",
+    "3. Click **Compare & pull request** bottom to create a pull request\n",
+    "4. Type in title and description\n",
+    "5. Click **Create Pull Request**\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,20 +305,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git checkout <name>: change to the target branch, or add -b <name> to create a new branch and change to the new branch"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
