--- a/lecture_03/worksheet_03.ipynb
+++ b/lecture_03/worksheet_03.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jou-Hsuan Lee  \n",
+    "UID: U15459646 \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,7 +25,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Testable."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +39,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(1,2,3): a<b<c  \n",
+    "(1,1,1): a<=b<=c  \n",
+    "Need both positive and negative hypothesis."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +55,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "c(1,2,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +73,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- (2, 4, 6) postive example\n",
+    "- (6, 8 , 10) negative example\n",
+    "- (1, 3, 5) negative example"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +89,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "c(1,2,3)"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,10 +103,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Process data\n",
+    "2. Explore data\n",
+    "3. Extract features\n",
+    "4. Create model  \n",
+    "\n",
+    "The steps are iterative."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,10 +127,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- record: patients' information\n",
+    "- graph: social connection\n",
+    "- image: chest X-rays\n",
+    "- text: movie reviews"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,10 +144,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Cell type clustering."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,12 +158,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "COVID-19 prediction through X-ray images (labeled)."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,9 +179,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
