--- a/lecture_04/worksheet_04.ipynb
+++ b/lecture_04/worksheet_04.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jou-Hsuan Lee  \n",
+    "UID: U15459646\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,7 +28,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "d: dimensional space. i.e. x=[x_1, x_2,..x_d]  \n",
+    "p: parameters to decide which type of minkowski distance to calcualte. When p=1, it's Manhattan Distance, while p=2, it's Euclidean Distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,10 +43,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Euclidean distance = √Σ(xi - yi)². It calculates the shortest length of two points in 2D.  \n",
+    "Manhattan distance = Σ|xi - yi|. It calculates the shortest grid lines between two points in 2D. "
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,7 +65,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Distance between two points will be closer to 1."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +79,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. According to the distance function:\n",
+    "- d(i, j) = 0 if and only if i = j\n",
+    "- d(i, j) = d(j, i)\n",
+    "- d(i, j) ≤ d(i, k) + d(k, j)  \n",
+    "When p<1, the last inequality is no longer hold.\n",
+    "For example, there are A(0,0) B(0,1) C(1,0) in 2D space. If p=0.5, AB + AC = 1 + 1 = 2 and BC = 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +98,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When directioin is more important then magnitude"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +112,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "size of the intersection"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +157,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['Alice', 'my', 'name', 'is', 'hello', 'Bob']\n",
+      "[1, 1, 1, 1, 1, 0]\n"
      ]
     }
    ],
@@ -179,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,13 +211,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'my', 'name', 'hi', 'Claude', 'is', 'hello', 'Bob']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -211,10 +236,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'my', 'name', 'hi', 'Claude', 'is', 'hello', 'Bob']\n",
+      "[1, 1, 1, 0, 0, 1, 1, 0]\n",
+      "[0, 1, 1, 0, 0, 1, 1, 1]\n",
+      "[0, 1, 1, 1, 1, 1, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(all_words)\n",
+    "print(v1)\n",
+    "print(v2)\n",
+    "print(v3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,15 +269,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def minkowski_dist(x,y,p):\n",
+    "    if p < 1:\n",
+    "        raise ValueError('p must be greater than 1.')\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError('x, y must be in the same dimensional space.')\n",
+    "    res = 0\n",
+    "    for i in range(len(x)):\n",
+    "        res += abs(x[i] - y[i])**p\n",
+    "    return res**(1/p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 0, 0, 1, 1, 0] [0, 1, 1, 0, 0, 1, 1, 1]\n",
+      "2.0\n",
+      "[1, 1, 1, 0, 0, 1, 1, 0] [0, 1, 1, 1, 1, 1, 0, 0]\n",
+      "4.0\n",
+      "[0, 1, 1, 0, 0, 1, 1, 1] [0, 1, 1, 1, 1, 1, 0, 0]\n",
+      "4.0\n",
+      "[0, 1, 1, 1, 1, 1, 0, 0] [0, 1, 1, 0, 0, 1, 1, 1]\n",
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_vec = [v1,v2,v3]\n",
+    "\n",
+    "for i in range(len(all_vec)):\n",
+    "    for j in range(1,len(all_vec)):\n",
+    "        if i != j:\n",
+    "            print(all_vec[i], all_vec[j])\n",
+    "            print(minkowski_dist(all_vec[i], all_vec[j], 1))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "v1 v2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +336,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Alice', 'my', 'hi', 'name', 'Claude', 'is', 'hello', 'Bob']\n",
+      "[1, 0, 1, 0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 1, 0, 1, 0]\n",
+      "[0, 1, 0, 1, 1, 1, 0, 1]\n",
+      "[1, 1, 1, 1, 1, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0, 0, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus = [\"hi Alice\", \"hello Claude\",\"Bob my name is Claude\",\"hi Claude my name is Alice\",\"hello Bob\"]\n",
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)\n",
+    "\n",
+    "matrix = [[1 if word in sentence else 0 for word in all_words] for sentence in corpus]\n",
+    "for vec in matrix:    \n",
+    "    print(vec)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,13 +371,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = len(matrix)\n",
+    "cols = len(matrix[0])\n",
+    "print(rows, cols)"
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -279,20 +397,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 1, 0, 1, 0] [0, 0, 0, 0, 0, 0, 1, 1]\n",
+      "['Claude', 'hello']\n",
+      "['hello', 'Bob']\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mini = minkowski_dist(matrix[0],matrix[1],1)\n",
+    "\n",
+    "for i in range(len(matrix)):\n",
+    "    for j in range(1,len(matrix)):\n",
+    "        if i != j:\n",
+    "            if mini > minkowski_dist(matrix[i],matrix[j],1):\n",
+    "                mini = minkowski_dist(matrix[i],matrix[j],1)\n",
+    "                print(matrix[i],matrix[j])\n",
+    "                print([all_words[x] for x in range(len(all_words)) if matrix[i][x] == 1])\n",
+    "                print([all_words[x] for x in range(len(all_words)) if matrix[j][x] == 1])\n",
+    "                print(minkowski_dist(matrix[i],matrix[j],1))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\"hello Claude\", \"hello Bob\""
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -306,9 +449,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
