--- a/lecture_05/worksheet_05.ipynb
+++ b/lecture_05/worksheet_05.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jou-Hsuan Lee  \n",
+    "UID: U15459646 \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -46,7 +45,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[0,0.5] [1.5,2,6,6.5,7] => new centroids[0.25, 4.6]  \n",
+    "[0, 0.5, 1.5, 2] [6,6.5,7] => new centroids[1,6.5]  \n",
+    "=>coverge"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +61,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function for k means is a method to evalute the solutions we found."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +75,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The first step of k means is to randomly select the k centroids. With different starting points, we might get very different solutions on a given dataset."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +89,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "It's a greedy algorithm so we can always find a local minimum."
+   ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,15 +132,61 @@
     "        plt.close()\n",
     "        self.snaps.append(im.fromarray(np.asarray(im.open(TEMPFILE))))\n",
     "\n",
+    "    def distance(self, x, y):\n",
+    "        return np.linalg.norm(x - y)\n",
+    "        \n",
+    "    def initialize(self):\n",
+    "        return self.data[np.random.choice(range(len(self.data)), self.k, replace=False)]\n",
+    "\n",
+    "    def assign(self, centers):\n",
+    "        for i in range(len(self.data)):\n",
+    "            mininum = self.distance(centers[0], self.data[i])\n",
+    "            self.assignment[i] = 0\n",
+    "            for j in range(len(centers)):\n",
+    "                dist = self.distance(centers[j], self.data[i])\n",
+    "                if dist < mininum:\n",
+    "                    self.assignment[i] = j\n",
+    "                    mininum = dist\n",
+    "\n",
+    "    def is_diff_clusters(self, centers, new_centers):\n",
+    "        for i in range(len(centers)):\n",
+    "            if self.distance(centers[i], new_centers[i]) != 0:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "    def get_centers(self):\n",
+    "        centers = []\n",
+    "        for i in set(self.assignment):\n",
+    "            cluster = []\n",
+    "            for j in range(len(self.data)):\n",
+    "                if self.assignment[j] == i:\n",
+    "                    cluster.append(self.data[j])\n",
+    "            centers.append(np.mean(cluster, axis=0))\n",
+    "        return np.array(centers)\n",
     "\n",
     "    def lloyds(self):\n",
-    "        ...\n",
+    "        centers = self.initialize()\n",
+    "        self.assign(centers)\n",
+    "        self.snap(centers)\n",
+    "        new_centers = self.get_centers()\n",
+    "        \n",
+    "        while self.is_diff_clusters(centers, new_centers):\n",
+    "            self.assign(new_centers)\n",
+    "            centers = new_centers\n",
+    "            self.snap(centers)\n",
+    "            new_centers = self.get_centers()\n",
     "        return\n",
+    "\n",
+    "       \n",
     "            \n",
     "\n",
-    "kmeans = KMeans(X, 6)\n",
+    "kmeans = KMeans(X, 4)\n",
     "kmeans.lloyds()\n",
+    "\n",
+    "\n",
     "images = kmeans.snaps\n",
+    "\n",
     "\n",
     "images[0].save(\n",
     "    'kmeans.gif',\n",
@@ -141,21 +195,28 @@
     "    append_images=images[1:],\n",
     "    loop=0,\n",
     "    duration=500\n",
-    ")"
+    ")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
