--- a/lecture_06/worksheet_06.ipynb
+++ b/lecture_06/worksheet_06.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Worksheet 06\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Jou-Hsuan Lee  \n",
+    "UID: U15459646  \n",
     "\n",
     "### Topics\n",
     "\n",
@@ -23,7 +22,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The Initialization step. In K means, the initial centers are randomly selected, while in K mean ++, the initialization starts with a random center and the other centers are selected in a way that is proportional to the squared distances.   \n",
+    "(K mean ++ is always better than k mean)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +37,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Tends to create clusters of similar sizes\n",
+    "2. Sensitive to data density\n",
+    "3. Challenges with non-globular data shapes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +74,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Pick k =2 or 3 based on the figures, because the clusters all have silhouette score greater then the average silhouette score.\n",
+    "We can further discuss with experts whether to choose 2 or 3 clusters."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,11 +111,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 |√2 | 3 | 1 |2√2|\n",
+    "| B |√2 | 0 |√5 | 1 |√2 |\n",
+    "| C | 3 |√5 | 0 |√10|√5 |\n",
+    "| D | 1 | 1 |√10| 0 |√5 |\n",
+    "| E |2√2|√2 |√5 |√5 | 0 |"
    ]
   },
   {
@@ -115,12 +124,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |AD | B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|AD | 0 | 1 | 3 |√5 |\n",
+    "| B | 1 | 0 |√5 |√2 |\n",
+    "| C | 3 |√5 | 0 |√5 |\n",
+    "| E |√5 |√2 |√5 | 0 |"
    ]
   },
   {
@@ -129,11 +138,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   |ABD| C | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|ABD| 0 | √5| √2|\n",
+    "| C | √5| 0 | √5|\n",
+    "| E | √2| √5| 0 |"
    ]
   },
   {
@@ -142,10 +151,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   |ABDE| C |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|ABDE| 0 |√5|\n",
+    "| C |√5 | 0 |"
    ]
   },
   {
@@ -164,13 +173,13 @@
    "source": [
     "Step 1\n",
     "\n",
-    "|   | A | B | C | D | E |\n",
+    "|   | A | B | C | D | E |   \n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 |√2 | 3 | 1 |2√2|\n",
+    "| B |√2 | 0 |√5 | 1 |√2 |\n",
+    "| C | 3 |√5 | 0 |√10|√5 |\n",
+    "| D | 1 | 1 |√10| 0 |√5 |\n",
+    "| E |2√2|√2 |√5 |√5 | 0 |"
    ]
   },
   {
@@ -179,25 +188,25 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |AD | B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|AD | 0 | √2|√10|2√2|\n",
+    "| B | √2| 0 |√5 |√2 |\n",
+    "| C |√10|√5 | 0 |√5 |\n",
+    "| E |2√2|√2 |√5 | 0 |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3\n",
+    "Step 3. \n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   |ABD|C  | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|ABD| 0 |√10|2√2|\n",
+    "|C  |√10| 0 |√5 |\n",
+    "|E  |2√2|√5 | 0 |"
    ]
   },
   {
@@ -206,24 +215,38 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   |ABDE|C  |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|ABDE| 0 |√10|\n",
+    "|C  |√10| 0 |"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
